--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "author": "Akshay Pandey",
   "license": "MIT",
   "scripts": {
-    "live": "live-server public",
-    "build": "webpack",
+    "live": "live-server public/",
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server --watch",
     "test": "jest --config=jest.config.json",
     "test_watch": "jest  --config=jest.config.json --watch"
@@ -26,9 +27,10 @@
     "enzyme-to-json": "^3.0.1",
     "jest": "^20.0.4",
     "live-server": "^1.2.1",
+    "mini-css-extract-plugin": "^1.3.3",
     "moment": "^2.18.1",
     "node": "^14.15.1",
-    "node-sass": "^5.0.0",
+    "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "raf": "^3.3.2",
     "react": "16.0.0",
@@ -40,7 +42,7 @@
     "react-router-dom": "^5.2.0",
     "react-test-renderer": "^16.0.0",
     "redux": "^4.0.5",
-    "sass-loader": "^10.1.0",
+    "sass-loader": "^7.3.1",
     "style-loader": "^2.0.0",
     "uuid": "^8.3.2",
     "validator": "8.0.0",
