--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "enzyme": "^3.0.0",
     "enzyme-adapter-react-16": "^1.0.0",
     "enzyme-to-json": "^3.0.1",
+    "express": "^4.15.4",
     "jest": "^20.0.4",
     "live-server": "^1.2.1",
-    "mini-css-extract-plugin": "^1.3.3",
     "moment": "^2.18.1",
     "node": "^14.15.1",
     "node-sass": "^4.14.1",
@@ -50,6 +50,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
+    "mini-css-extract-plugin": "^1.3.3",
     "webpack-cli": "^3.3.8"
   }
 }
