--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server --watch",
     "test": "jest --config=jest.config.json",
-    "test_watch": "jest  --config=jest.config.json --watch"
+    "test_watch": "jest  --config=jest.config.json --watch",
+    "start" : "node server/server.js",
+    "heroku-postbuild" : "build:prod"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
