--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "jest --config=jest.config.json",
     "test_watch": "jest  --config=jest.config.json --watch",
     "start" : "node server/server.js",
-    "heroku-postbuild" : "build:prod"
+    "heroku-postbuild" : "npm run build:prod"
   },
   "dependencies": {
     "babel-cli": "6.24.1",
