--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "npm": "6.x"
   },
   "scripts": {
-    "live": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server --watch",
@@ -28,12 +27,7 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "^5.0.1",
-    "enzyme": "^3.0.0",
-    "enzyme-adapter-react-16": "^1.0.0",
-    "enzyme-to-json": "^3.0.1",
     "express": "^4.15.4",
-    "jest": "^20.0.4",
-    "live-server": "^1.2.1",
     "moment": "^2.18.1",
     "node": "^14.15.1",
     "node-sass": "^4.14.1",
@@ -46,17 +40,22 @@
     "react-modal": "2.2.2",
     "react-redux": "^5.0.5",
     "react-router-dom": "^5.2.0",
-    "react-test-renderer": "^16.0.0",
+    
     "redux": "^4.0.5",
     "sass-loader": "^7.3.1",
     "style-loader": "^2.0.0",
     "uuid": "^8.3.2",
     "validator": "8.0.0",
-    "webpack": "^4.44.2",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^4.44.2"
   },
   "devDependencies": {
     "mini-css-extract-plugin": "^1.3.3",
-    "webpack-cli": "^3.3.8"
+    "webpack-cli": "^3.3.8",
+    "enzyme": "^3.0.0",
+    "enzyme-adapter-react-16": "^1.0.0",
+    "enzyme-to-json": "^3.0.1",
+    "jest": "^20.0.4",
+    "react-test-renderer": "^16.0.0",
+    "webpack-dev-server": "^3.11.0"
   }
 }
