--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "babel-preset-react": "6.24.1",
     "css-loader": "^5.0.1",
     "express": "^4.15.4",
+    "firebase": "^8.2.10",
+    "history": "^4.7.2",
     "moment": "^2.18.1",
     "node": "^14.15.1",
     "node-sass": "^4.14.1",
@@ -42,6 +44,8 @@
     "react-redux": "^5.0.5",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
+    "redux-mock-store": "^1.5.4",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^7.3.1",
     "style-loader": "^2.0.0",
     "uuid": "^8.3.2",
